
syntax = "proto3";

package employee;

import "google/api/annotations.proto";

option go_package = "grpc-employee-book/proto;employee";

message Employee {
    int32 id = 1;
    string name = 2;
    string city = 3;
    int32 salary = 4;
}

message ID {
    int32 id = 1;
}

service EmployeeService {
    rpc CreateEmployee(Employee) returns (ID) {
      option (google.api.http) = {
          post: "/v1/employee/create"
          body: "*"
      };
    }
    rpc ReadEmployee(ID) returns (Employee) {
      option (google.api.http) = {
        get: "/v1/employee/{id}"
      };
    }
    rpc UpdateEmployee(Employee) returns (ID) {
      option (google.api.http) = {
        put: "/v1/employee/{id}"
        body: "*"

        additional_bindings {
          patch: "/v1/employee/{id}"
          body: "*"
        }
      };
    }
    rpc DeleteEmployee(ID) returns (ID) {
      option (google.api.http) = {
        delete: "/v1/employee/{id}"
      };
    }
}
